adding box slider to home page features

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -116,7 +116,7 @@ body {
   overflow: hidden; }
 
 .icons-sprite, #flickr-icn, #twitter-icn, #linkedin-icn, #gplus-icn, #subscribe-icn, #about-me-icn, #config-icn, #pnl-11, #pnl-12 {
-  background: url('../images/icons-se92761eb27.png') no-repeat; }
+  background: url('../images/icons-s860a3a1229.png') no-repeat; }
 
 /* load sprite */
 #sm-links {
@@ -130,37 +130,34 @@ body {
   float: left;
   width: 40px;
   height: 40px;
-  -moz-transition-property: background-color;
-  -webkit-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -moz-transition-duration: 0.3s;
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s; }
+  -webkit-transition: background-color, 0.3s;
+  -moz-transition: background-color, 0.3s;
+  -ms-transition: background-color, 0.3s;
+  -o-transition: background-color, 0.3s;
+  transition: background-color, 0.3s; }
 
 #flickr-icn {
-  background-position: 0 -88px; }
+  background-position: 0 -248px; }
   #flickr-icn:hover {
     background-color: #FE63BB; }
 
 #twitter-icn {
-  background-position: 0 -336px; }
+  background-position: 0 -80px; }
   #twitter-icn:hover {
     background-color: #019AD2; }
 
 #linkedin-icn {
-  background-position: 0 -168px; }
+  background-position: 0 -288px; }
   #linkedin-icn:hover {
     background-color: #0571A6; }
 
 #gplus-icn {
-  background-position: 0 -128px; }
+  background-position: 0 -40px; }
   #gplus-icn:hover {
     background-color: #C53727; }
 
 #subscribe-icn {
-  background-position: 0 -296px; }
+  background-position: 0 -120px; }
   #subscribe-icn:hover {
     background-color: #ff7200; }
 
@@ -171,12 +168,12 @@ body {
     display: inline; }
 
 #about-me-icn {
-  background-position: 0 0; }
+  background-position: 0 -208px; }
   #about-me-icn:hover {
     background-color: #b637ff; }
 
 #config-icn {
-  background-position: 0 -256px; }
+  background-position: 0 0; }
   #config-icn:hover {
     background-color: #b637ff; }
 
@@ -230,16 +227,14 @@ body {
   bottom: 0;
   left: 0;
   width: 0;
-  -moz-transition-property: width;
-  -webkit-transition-property: width;
-  -o-transition-property: width;
-  transition-property: width;
-  -moz-transition-duration: 2s;
-  -webkit-transition-duration: 2s;
-  -o-transition-duration: 2s;
-  transition-duration: 2s;
-  -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -webkit-transition: width, 2s;
+  -moz-transition: width, 2s;
+  -ms-transition: width, 2s;
+  -o-transition: width, 2s;
+  transition: width, 2s;
   -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -ms-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   -o-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1); }
 
@@ -282,24 +277,21 @@ body {
   display: inline; }
 
 #pnl-11 {
-  background-position: 0 -208px; }
+  background-position: 0 -160px; }
 
 #pnl-12 {
-  background-position: 0 -40px; }
+  background-position: 0 -328px; }
 
 .pnl-icn {
   display: block;
   float: left;
   width: 48px;
   height: 48px;
-  -moz-transition-property: background-color;
-  -webkit-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -moz-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s; }
+  -webkit-transition: background-color, 0.4s;
+  -moz-transition: background-color, 0.4s;
+  -ms-transition: background-color, 0.4s;
+  -o-transition: background-color, 0.4s;
+  transition: background-color, 0.4s; }
 
 .pnl-txt {
   font: 500 16px/1 "Cabin Condensed", helvetica, Arial, sans-serif;
@@ -319,14 +311,11 @@ body {
   width: 48px;
   height: 48px;
   overflow: hidden;
-  -moz-transition-property: width;
-  -webkit-transition-property: width;
-  -o-transition-property: width;
-  transition-property: width;
-  -moz-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s; }
+  -webkit-transition: width, 0.4s;
+  -moz-transition: width, 0.4s;
+  -ms-transition: width, 0.4s;
+  -o-transition: width, 0.4s;
+  transition: width, 0.4s; }
   .primary-nav-link:hover {
     color: white;
     width: 140px; }
@@ -337,8 +326,7 @@ body {
 ----------------------------------------------------------------------------- */
 #featured-projects {
   position: relative;
-  height: 350px;
-  overflow: hidden; }
+  height: 350px; }
 
 #featured-project-nav {
   position: absolute;
@@ -368,20 +356,38 @@ body {
   margin: 0;
   overflow: hidden; }
 
-.feature {
+#feature-images {
   width: 740px;
   height: 350px;
-  background: white;
-  background: rgba(255, 255, 255, 0.8);
   display: block;
   position: absolute;
   top: 0;
   right: 0; }
+  #feature-images ul {
+    position: relative; }
+  #feature-images li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 350px;
+    width: 740px; }
 
-.feature-desc {
+.feature-image {
+  width: 100%;
+  height: 100%; }
+
+#feature-descriptions {
   margin: 0 750px 0 0;
-  height: 330px;
-  overflow: auto; }
+  overflow: hidden;
+  height: 350px; }
+  #feature-descriptions ul {
+    position: relative;
+    height: 350px; }
+  #feature-descriptions li {
+    height: 330px;
+    position: absolute;
+    top: 0;
+    left: 0; }
 
 /* =Posts
 ----------------------------------------------------------------------------- */
@@ -464,7 +470,7 @@ body {
 ----------------------------------------------------------------------------- */
 .dark-content-box {
   background: black;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.9);
   padding: 10px;
   color: white; }
 
