--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -242,7 +242,6 @@ body { background: url(../images/main-bg.jpg) no-repeat #9c958e }
 #featured-projects {
   position: relative;
   height: 350px;
-  overflow: hidden;
 }
 
 // navigation links
@@ -282,20 +281,49 @@ body { background: url(../images/main-bg.jpg) no-repeat #9c958e }
   overflow: hidden;
 }
 
-.feature {
+#feature-images {
+  
   width: 740px;
   height: 350px;
-  @include background_rgba(255,255,255,0.8); // TODO remove this when images in place
   display: block;
   position: absolute;
   top: 0;
   right: 0;
+  
+  ul {
+    position: relative;
+  }
+  
+  li {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 350px;
+    width: 740px;
+  }
+  
 }
 
-.feature-desc {
+.feature-image { width: 100%; height: 100%; }
+
+#feature-descriptions {
+  
   margin: 0 740px + $gap 0 0;
-  height: 350px - (2 * $medium_padding);
-  overflow: auto;
+  overflow: hidden;
+  height: 350px;
+  
+  ul {
+    position: relative;
+    height: 350px;
+  }
+  
+  li {
+    height: 350px - (2 * $medium_padding);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  
 }
 
 
@@ -405,7 +433,7 @@ body { background: url(../images/main-bg.jpg) no-repeat #9c958e }
 /* =Layout elements
 ----------------------------------------------------------------------------- */
 .dark-content-box {
-  @include background_rgba(0,0,0,0.75);
+  @include background_rgba(0,0,0,0.9);
   padding: $medium_padding;
   color: white;
 }
