Style content slider and more links

--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -7,7 +7,7 @@ $gap: 10px;
 $thin_gap: $gap / 2;
 
 // colors
-$cl_theme_elements: #b637ff;
+$cl_theme_elements: #44a399;
 $cl_neutral_bg: #ddd;
 $cl_content_text: #444;
 
