--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,7 +12,7 @@ License URI: license.txt
 body { background: url(../images/main-bg.png) repeat #555 }
 
 p {
-  
+  margin: 0 0 1.2em;
   img { vertical-align: text-top; }
 }
 
@@ -36,12 +36,13 @@ p {
   
 }
 
-.section-heading {
+.section-heading,
+#reply-title {
 
   background-color: $cl_theme_elements;
   color: white;
   padding: 0 $thin_padding;
-  margin: $gap 0;
+  margin: 0 0 $gap 0;
 
   span { color: black; }
 
@@ -85,6 +86,7 @@ p {
 
 /* =Footer
 ----------------------------------------------------------------------------- */
+@import 'footer';
 
 /* =Utils
 ----------------------------------------------------------------------------- */
